# NS

./: COPYING.html  COPYING.txt  README.md
dev/3.2-LUA/: builddiff.bat  french_titles.txt  hallwall_1.wad  liblist.gam  ns-hltv.cfg  ns_eon.wad  titles.txt
dev/3.2-movements/: 512_textscheme.txt  Balance.txt  liblist.gam  lisences.txt  titles.txt
dev/hitboxtest/: Balance.txt  build-linux.sh  buildfullserver.bat  custom.hpk  listenserver.cfg  motd.txt  ns_eon.wad  ns_metal.wad  ui.txt
dev/performance/: assets-shared-source.txt  liblist.gam  ns_hera.wad
dev/performance-3.0.5/: Balance.txt  assets-ignore-source.txt  config.cfg  download.html  mapcycle.txt  ns_context.qrk  ns_tanith.wad  settings.scr  user.scr
dev/tankefugl/: assets-common.txt  config.cfg  spanish_titles.txt  spraypaint.wad
main/: Balance.txt  assets-maps.txt  backupsrc.bat  config.cfg  liblist.gam  listenserver.cfg  readme.txt  settings.scr  titles.txt  ui.txt  user.scr
main/manual/: Quick_Start_Guide.html  alien_resourceuse.html  front_commander.html  front_nanogridlock.html  structures_advarmory.html  structures_protolab.html
main/maps/: co_angst.txt  co_sava.bsp
main/models/: b_infportalt.mdl  ba_defense.mdl  ba_offenset.mdl  p_gg.mdl  p_mine.mdl  (+5 more)
main/source/curl/docs/examples/: Makefile.am  Makefile.example  Makefile.in  README  curlgtk.c  fopen.c  ftpget.c  ftpgetresp.c  ftpupload.c  getinmemory.c  http-post.c  httpput.c  multi-app.c  multi-double.c  multi-post.c  multi-single.c  multithread.c  persistant.c  post-callback.c  postit2.c  sepheaders.c  simple.c  simplepost.c  simplessl.c
(+3891 files in other folders)
